force-app/main/default/objects/Redox_Mapping__mdt/Redox_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Field mapping for Redox data models and events.</description>
    <label>Redox Mapping</label>
    <pluralLabel>Redox Mappings</pluralLabel>
</CustomObject>