force-app/main/default/objects/Redox_Mapping__mdt/fields/Data_Model__c.field-meta.xml
<CustomField>
    <fullName>Data_Model__c</fullName>
    <description>The Redox data model type.</description>
    <inlineHelpText>Which Redox data model is this mapping for?</inlineHelpText>
    <label>Data Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PatientAdmin</fullName>
                <default>true</default>
                <label>PatientAdmin</label>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>