force-app/main/default/objects/Redox_Mapping__mdt/fields/Path__c.field-meta.xml
<CustomField>
	<fullName>Path__c</fullName>
	<description>The path to the field node, from the object key, in the JSON Redox data model, comma separated (i.e. &quot;Empoyer,Address&quot; for Guarantor Employer Address). If this value is an integer, it is assumed that the value is a list and it will take the &apos;n&apos;th element. If the value says &quot;concat&quot;, it will concatenate all entries in the list.</description>
	<inlineHelpText>The path to the field node, from the object key, in the JSON Redox data model, comma separated (i.e. &quot;Empoyer,Address&quot; for Guarantor Employer Address). If this value is an integer, it is assumed that the value is a list and it will take the &apos;n&apos;th element.</inlineHelpText>
	<label>Path</label>
	<length>255</length>
	<type>Text</type>
</CustomField>