force-app/main/default/objects/Redox_Mapping__mdt/fields/Redox_Concatenation_Field__c.field-meta.xml
<CustomField>
    <fullName>Redox_Concatenation_Field__c</fullName>
    <description>The field to use for object concatenation.</description>
    <label>Redox Concatenation Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>