force-app/main/default/objects/Redox_Mapping__mdt/fields/Redox_Data_Model_and_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Redox_Data_Model_and_Event_Type__c</fullName>
    <label>Redox Data Model and Event Type</label>
    <referenceTo>Redox_Data_Model_and_Event_Type__mdt</referenceTo>
    <relationshipLabel>Redox Mappings</relationshipLabel>
    <relationshipName>Redox_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>