force-app/main/default/objects/Redox_Mapping__mdt/fields/Redox_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Redox_Event_Type__c</fullName>
    <description>The Event Type from Redox within some particular Redox Data Model.</description>
    <inlineHelpText>The Event Type from Redox within some particular Redox Data Model.</inlineHelpText>
    <label>Redox Event Type</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>