force-app/main/default/objects/Redox_Mapping__mdt/fields/Redox_Field__c.field-meta.xml
<CustomField>
    <fullName>Redox_Field__c</fullName>
    <description>The JSON key for the field in the Redox data model</description>
    <inlineHelpText>The JSON key for the field in the Redox data model</inlineHelpText>
    <label>Redox Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>