force-app/main/default/objects/Redox_Mapping__mdt/fields/Redox_Field_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Redox_Field_Behavior__c</fullName>
    <description>What to do when the parser reaches the Redox Field level of the Data Model.</description>
    <label>Redox Field Behavior</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get Value</fullName>
                <default>true</default>
                <label>Get Value</label>
            </value>
            <value>
                <fullName>Get Value at List Index</fullName>
            </value>
            <value>
                <fullName>Concatenate Strings</fullName>
            </value>
            <value>
                <fullName>Concatenate Objects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>