force-app/main/default/objects/Redox_Mapping__mdt/fields/Redox_Path__c.field-meta.xml
<CustomField>
    <fullName>Redox_Path__c</fullName>
    <description>The path to the field node from the object key in the JSON Redox data model, stored as comma separated list (i.e. &quot;Guarantor,Employer,Address&quot; for Guarantor Employer Address). Use DEFAULT_VALUE to predefine a Salesforce field&#39;s default value.</description>
    <inlineHelpText>The path to the field node from the object key in the JSON Redox data model, stored as comma separated list (i.e. &quot;Guarantor,Employer,Address&quot; for Guarantor Employer Address). Use DEFAULT_VALUE to predefine a Salesforce field&#39;s default value.</inlineHelpText>
    <label>Redox Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>