force-app/main/default/objects/Redox_Mapping__mdt/fields/Salesforce_Concatenation_Delimiter__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Concatenation_Delimiter__c</fullName>
    <description>The delimiter used for combining list information from Redox.</description>
    <inlineHelpText>The delimiter used for combining list information from Redox.</inlineHelpText>
    <label>Salesforce Concatenation Delimiter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Comma</fullName>
            </value>
            <value>
                <fullName>Semicolon</fullName>
            </value>
            <value>
                <fullName>Newline</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>Pipe</fullName>
            </value>
            <value>
                <fullName>Comma Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>