force-app/main/default/objects/Redox_Mapping__mdt/fields/Salesforce_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Default_Value__c</fullName>
    <description>When the Redox Path is set to DEFAULT_VALUE, this field will be pushed into the defined Salesforce Field.</description>
    <inlineHelpText>When the Redox Path is set to DEFAULT_VALUE, this field will be pushed into the defined Salesforce Field.</inlineHelpText>
    <label>Salesforce Default Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>