force-app/main/default/objects/Redox_Mapping__mdt/fields/Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field__c</fullName>
    <description>The Salesforce SObject field that is mapped to the Redox field.</description>
    <inlineHelpText>The Salesforce SObject field that is mapped to the Redox field.</inlineHelpText>
    <label>Salesforce Field</label>
    <metadataRelationshipControllingField>Redox_Mapping__mdt.Salesforce_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Redox_Mappings</relationshipLabel>
    <relationshipName>Redox_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>