force-app/main/default/objects/Redox_Mapping__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <description>The Salesforce SObject associated to the Redox data model field.</description>
    <inlineHelpText>The Salesforce SObject associated to the Redox data model field.</inlineHelpText>
    <label>Salesforce Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Redox_Mappings</relationshipLabel>
    <relationshipName>Redox_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>