force-app/main/default/objects/Redox_Mapping__mdt/fields/Salesforce_Related_By_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Related_By_Field__c</fullName>
    <description>The field on the Salesforce Object that defines the entity lookup relationship to the Related Object.</description>
    <inlineHelpText>The field on the Salesforce Object that defines the entity lookup relationship to the Related Object.</inlineHelpText>
    <label>Salesforce Related By Field</label>
    <metadataRelationshipControllingField>Redox_Mapping__mdt.Salesforce_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Related_By_Fields</relationshipLabel>
    <relationshipName>Related_By_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>