force-app/main/default/objects/Redox_Mapping__mdt/fields/Salesforce_Related_To_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Related_To_Object__c</fullName>
    <description>The Salesforce SObject parent that this data is related to. All data models assume a singular parent object. This field should be blank when mapping the parent data.</description>
    <inlineHelpText>The Salesforce SObject parent that this data is related to. All data models assume a singular parent object. This field should be blank when mapping the parent data.</inlineHelpText>
    <label>Salesforce Related To Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Redox_Mappings_Related_To</relationshipLabel>
    <relationshipName>Redox_Mappings_Related_To</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>