force-app/main/default/objects/Redox_Mapping__mdt/validationRules/DEFAULT_VALUE_Path_Requires_a_Default.validationRule-meta.xml
<ValidationRule>
    <fullName>DEFAULT_VALUE_Path_Requires_a_Default</fullName>
    <active>true</active>
    <description>When the Redox Path equals DEFAULT_VALUE, you must supply a Salesforce Default Value.</description>
    <errorConditionFormula>AND(
 Redox_Path__c = &#39;DEFAULT_VALUE&#39;,
 ISBLANK(Salesforce_Default_Value__c)
)</errorConditionFormula>
    <errorDisplayField>Salesforce_Default_Value__c</errorDisplayField>
    <errorMessage>When the Redox Path equals DEFAULT_VALUE, you must supply a Salesforce Default Value.</errorMessage>
</ValidationRule>