force-app/main/default/objects/Redox_Mapping__mdt/validationRules/Get_List_Value_Must_Have_Index_In_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Get_List_Value_Must_Have_Index_In_Field</fullName>
    <active>true</active>
    <description>When the behavior is to get a list index value, the Redox Field must be an index number, where zero is the first item.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Redox_Field_Behavior__c , &#39;Get List Value at Index&#39;),
  NOT(ISNUMBER( Redox_Field__c ))
)</errorConditionFormula>
    <errorDisplayField>Redox_Field__c</errorDisplayField>
    <errorMessage>When the behavior is to get a list index value, the Redox Field must be an index number, where zero is the first item.</errorMessage>
</ValidationRule>