force-app/main/default/objects/Redox_Mapping__mdt/validationRules/Must_Supply_Field_With_Concatenate_Objs.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Supply_Field_With_Concatenate_Objs</fullName>
    <active>true</active>
    <description>You must supply a Concatenate Field when the behavior is Concatenate Objects.</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Redox_Field_Behavior__c, &#39;Concatenate Objects&#39;),
 ISBLANK(Redox_Concatenation_Field__c)
)</errorConditionFormula>
    <errorDisplayField>Redox_Concatenation_Field__c</errorDisplayField>
    <errorMessage>You must supply a Concatenate Field when the behavior is Concatenate Objects.</errorMessage>
</ValidationRule>